# smart_classroom_system

./: .gitignore  README.md
smart_classroom_admin/ant-design-vue-jeecg/: package.json  vue.config.js
smart_classroom_admin/ant-design-vue-jeecg/public/: index.html
smart_classroom_admin/ant-design-vue-jeecg/src/components/layouts/: UserLayout.vue
smart_classroom_admin/ant-design-vue-jeecg/src/components/page/: GlobalFooter.vue  GlobalHeader.vue
smart_classroom_admin/ant-design-vue-jeecg/src/components/tools/: Logo.vue
smart_classroom_admin/ant-design-vue-jeecg/src/views/dashboard/: Analysis.vue  IndexChart.vue
smart_classroom_admin/ant-design-vue-jeecg/src/views/smc/: SmcHome.vue
smart_classroom_admin/ant-design-vue-jeecg/src/views/smc/cht_det/: SmcChtDetList.vue  SmcChtDetVideoPage.vue  SmcChtDetVideos.vue
smart_classroom_admin/ant-design-vue-jeecg/src/views/smc/cht_det/modules/: SmcChtDetForm.vue  SmcChtDetModal.Style#Drawer.vue  SmcChtDetSnapshots.vue
smart_classroom_admin/ant-design-vue-jeecg/src/views/smc/dyn_att/: SmcDynAttList.vue  SmcDynAttPage.vue  SmcFaceRegList.vue
smart_classroom_admin/ant-design-vue-jeecg/src/views/smc/dyn_att/modules/: SmcDynAttForm.vue  SmcDynAttModal.Style#Drawer.vue  SmcDynAttModal.vue  SmcFaceRegForm.vue  SmcFaceRegModal.Style#Drawer.vue  SmcFaceRegModal.vue
smart_classroom_admin/ant-design-vue-jeecg/src/views/smc/ol_mtr/: SmcOlMtr.vue  SmcOlMtrList.vue  SmcOlMtrListNoEdit.vue
smart_classroom_admin/ant-design-vue-jeecg/src/views/smc/ol_mtr/modules/: SmcOlMtrChtDet.vue  SmcOlMtrDynAtt.vue  SmcOlMtrFinish.vue  SmcOlMtrForm.vue  SmcOlMtrModal.vue  SmcOlMtrNotStart.vue
smart_classroom_admin/ant-design-vue-jeecg/src/views/smc/smc/: SmcAiServerList.vue  SmcClassList.vue  SmcVideoSrcList.vue
smart_classroom_admin/ant-design-vue-jeecg/src/views/smc/smc/modules/: SmcAiServerForm.vue  SmcClassForm.vue  SmcClassModal.vue  SmcVideoSrcForm.vue  SmcVideoSrcModal.Style#Drawer.vue
smart_classroom_admin/ant-design-vue-jeecg/src/views/test/: helloworld.vue
smart_classroom_admin/jeecg-boot/: pom.xml
smart_classroom_admin/jeecg-boot/jeecg-boot-base/jeecg-boot-base-core/src/main/java/org/jeecg/config/: RestTemplateConfig.java
smart_classroom_admin/jeecg-boot/jeecg-boot-base/jeecg-boot-base-core/src/main/java/org/jeecg/config/shiro/: ShiroConfig.java
smart_classroom_admin/jeecg-boot/jeecg-boot-module-smc/: pom.xml
smart_classroom_admin/jeecg-boot/jeecg-boot-module-smc/src/main/java/org/jeecg/: JeecgSmcApplication.java  SmcDataBaseDocumentGeneration.java
smart_classroom_admin/jeecg-boot/jeecg-boot-module-smc/src/main/java/org/jeecg/modules/smc/controller/: HelloWorldController.java  HomeController.java  SmcAiServerController.java  SmcAiServerExtraController.java  SmcChtDetController.java  SmcChtDetExtraController.java  SmcClassController.java  SmcDynAttController.java  SmcDynAttExtraController.java  SmcFaceRegController.java  (+3 more)
smart_classroom_admin/jeecg-boot/jeecg-boot-module-smc/src/main/java/org/jeecg/utils/: ResultUtils.java
smart_classroom_admin/jeecg-boot/jeecg-boot-module-smc/src/test/java/org/jeecg/: JeecgSmcApplicationTests.java
smart_classroom_admin/jeecg-boot/jeecg-boot-module-system/: pom.xml
smart_classroom_admin/jeecg-boot/jeecg-boot-module-system/src/main/resources/: application-dev.yml
smart_classroom_admin/jeecg-boot/jeecg-boot-module-system/src/main/resources/jeecg/: jeecg_database.properties
smart_classroom_algo/: .gitignore  CMakeLists.txt
smart_classroom_algo/lean/: README.md
smart_classroom_algo/modules/: main.cpp  test.cpp
smart_classroom_algo/modules/smart_classroom/include/: smart_classroom.hpp
smart_classroom_algo/modules/smart_classroom/include/cheating_detection/: cheating_detection.hpp  data_saver.hpp
smart_classroom_algo/modules/smart_classroom/include/class_action/: class_action.hpp
smart_classroom_algo/modules/smart_classroom/include/common/: async.hpp  common_utils.hpp  constant.h  curl_utils.hpp  face_detector.hpp  json_utils.hpp  models_utils.hpp  object_detector.hpp  s3_utils.hpp
smart_classroom_algo/modules/smart_classroom/include/detector/: multi_gpu.hpp  scrfd.hpp  yolo.hpp
smart_classroom_algo/modules/smart_classroom/include/dynamic_attendance/: data_saver.hpp  dynamic_attendance.hpp
smart_classroom_algo/modules/smart_classroom/include/extra/: cmdline.h
smart_classroom_algo/modules/smart_classroom/include/face/: arcface.hpp
smart_classroom_algo/modules/smart_classroom/include/video_io/: video_io.hpp
smart_classroom_algo/modules/smart_classroom/src/: smart_classroom.cpp
smart_classroom_algo/modules/smart_classroom/src/cheating_detection/: base_data_saver.cpp  cheating_detection.cpp  cheating_detection_infer.cpp  data_saver.cpp
smart_classroom_algo/modules/smart_classroom/src/class_action/: class_action.cpp  head_pose.cpp
smart_classroom_algo/modules/smart_classroom/src/common/: curl_utils.cpp  json_utils.cpp  models_utils.cpp  s3_utils.cpp
smart_classroom_algo/modules/smart_classroom/src/detector/: multi_gpu.cpp  scrfd.cpp  scrfd_decode.cu  yolo.cpp  yolo_decode.cu
smart_classroom_algo/modules/smart_classroom/src/dynamic_attendance/: base_data_saver.cpp  data_saver.cpp  dynamic_attendance.cpp  dynamic_attendance_infer.cpp  register_face.cpp
smart_classroom_algo/modules/smart_classroom/src/face/: arcface.cpp
smart_classroom_algo/modules/smart_classroom/src/smart_classroom/: cheating_detection.cpp  dynamic_attendance.cpp
smart_classroom_algo/modules/smart_classroom/src/video_io/: ffmpeg_video_io.cpp
smart_classroom_algo/modules/smc_server/include/smc_svr/: SmcApp.hpp  smc_svr.hpp
smart_classroom_algo/modules/smc_server/src/: SmcApp.cpp  SmcAppChtDet.cpp  SmcAppDynAtt.cpp  SmcAppRegFace.cpp  smc_svr.cpp
smart_classroom_algo/modules/tensorRT/: CMakeLists.txt  import_lib.cpp
smart_classroom_algo/modules/tensorRT/common/: cuda_tools.hpp  infer_controller.hpp  json.hpp  monopoly_allocator.hpp  trt_tensor.cpp
smart_classroom_algo/modules/tensorRT/infer/: trt_infer.cpp
smart_classroom_algo/modules/tensorRT/onnxplugin/plugins/: DCNv2.cu
(+70 files in other folders)
